scrollbar height fix

--- a/style.css
+++ b/style.css
@@ -68,6 +68,13 @@ body {
     border:             2px solid white;
   }
 
+#window::-webkit-scrollbar-track-piece:end {
+    margin-bottom: 50px;
+}
+#window::-webkit-scrollbar-track-piece:start {
+    margin-top: 50px;
+}
+
 #question{
     font-family:        'Courier New', Courier, monospace;
     padding:            0 0 1rem 0;
